Time: 5 ms (1.46%) | Memory: 43 MB (13.34%) - LeetSync